test/scc/decl/semantic-errors/006.a
006.t:1:18: error: redefinition of 'a'